<resources>
    <string name="app_name">Movie Lists</string>
    <string name="action_settings">Settings</string>
    <string name="label_activity_perfil">Profile</string>

    <!-- Otros -->
    <string name="shared_photo_list_movie">shared_photo_list_movie</string>
    <string name="shared_photo_perfil">shared_photo_perfil</string>
    <string name="drawer_open">navigation drawer open</string>
    <string name="drawer_close">navigation drawer close</string>
    <string name="imagen_xml">Image</string>

    <!-- Textos correspondientes al xml de activity_inicio_sesion (AIS) -->
    <string name="AIS_Log_in">Log In</string>
    <string name="AIS_username">Username or email</string>
    <string name="AIS_password">Password</string>
    <string name="AIS_remember">Remember me</string>
    <string name="AIS_show_password">Show Password</string>
    <string name="AIS_register">REGISTER</string>
    <string name="AIS_forgot">I FORGOT MY PASSWORD</string>

    <!-- Textos correspondientes al xml de activity_perfil (AP) -->
    <string name="AP_edit_profile">Edit User Profile</string>
    <string name="AP_user">User</string>
    <string name="AP_name">Complete Name</string>
    <string name="AP_email">Email</string>

    <!-- Textos correspondientes al xml de activity_show_edit_movie (ASEM) -->
    <string name="ASEM_image_desc">Movie Poster</string>
    <string name="ASEM_title">Title</string>
    <string name="ASEM_category">Category</string>
    <string name="ASEM_study">Study</string>
    <string name="ASEM_sinopsis">Synopsis</string>
    <string name="ASEM_actors">Actors</string>
    <string name="ASEM_directors">Directors</string>
    <string name="ASEM_producers">Producers</string>
    <string name="ASEM_comment">Your Comment</string>
    <string name="ASEM_average">Average</string>
    <string name="ASEM_button_trailer">Button Trailer Player</string>
    <string name="ASEM_show_comments">Show Comments</string>
    <string name="ASEM_push_comment">Post your comment</string>
    <string name="ASEM_add_comment_rating">You must add a comment and a rating</string>
    <string name="ASEM_loading">Loading…</string>

    <!-- Textos correspondientes al xml de content_listas (CL) -->
    <string name="CL_toolbar_title">Movie Lists</string>

    <!-- Textos correspondientes al xml de elemento_lista (EL) -->
    <string name="EL_description">Description</string>

    <!-- Textos correspondientes al xml de formulario_alta (FA) -->
    <string name="FA_register">Register</string>

    <!-- Textos correspondientes al xml de nav_header_main (NHM) -->
    <string name="NHM_mail">usuario1@gmail.com</string>

    <!-- Textos correspondientes a InicioSesionActivity (ISA) -->
    <string name="ISA_remember">remember user data: </string>
    <string name="ISA_bad_user">Incorrect username or password, try again</string>

    <!-- Textos correspondientes a ListasActivity (LA) -->
    <string name="LA_favorites">Favorites</string>
    <string name="LA_best">Best rated</string>
    <string name="LA_favorites_desc">My favorite movies</string>
    <string name="LA_best_desc">The films with the best rating</string>
    <string name="LA_default_list_title">All</string>
    <string name="LA_default_list_description">All available films</string>
    <string name="LA_delete_list_dialog">Do you want to delete the list \u0022</string>
    <string name="LA_no_delete_list_dialog">The default list can not be deleted!</string>

    <!-- Textos correspondientes a PerfilActivity (PA) -->
    <string name="PA_user_log">User has not logged in!</string>
    <string name="PA_fields">Enter all fields</string>

    <!-- Textos correspondientes a MovieListAdapter (EL) -->
    <string name="MLA_user_ratings">user ratings</string>

    <!-- Textos correspondientes al xml de activity_main_drawer (NHM) -->
    <string name="AMD_share">Share</string>
    <string name="quitar_anuncios">Remove Advertising</string>
    <string name="compra_completada">Item purchased!</string>
    <string name="compartido_por"> Shared By: </string>
    <string name="select_application">Select Application</string>
    <string name="no_video_bonificado">No more ads will show for your loyalty</string>

    <!-- Textos correspondientes al xml de activity_nueva_lista (ANL) -->
    <string name="ANL_add_new_list">Add a new list</string>
    <string name="ANL_new_list_title">Title</string>
    <string name="ANL_new_list_description">Description</string>
    <string name="ANL_new_list_icon">Icon</string>
    <string name="ANL_ok">OK</string>
    <string name="ANL_cancel">Cancel</string>

    <!-- Textos correspondientes al xml de activity_new_movie (ANM) -->
    <string name="ANM_busqueda">Title, Category</string>

    <!-- Textos correspondientes al xmol de dialog_ratemyapp (DRMA) -->
    <string name="DRMA_rate">Please take a second for rate the app</string>
    <string name="DRMA_stars">1. Love MasterListas, please rate 5 star in Play Store</string>
    <string name="DRMA_problem">2. Have problems, please contact author to report issue</string>
    <string name="DRMA_author">CONTACT AUTHOR</string>
    <string name="DRMA_5stars">RATE 5 STAR</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="action">Action:</string>
    <string name="field_empty">You must write at least a title!</string>
    <string name="duplicated_item">Duplicated movie!</string>
    <string name="educational_demo">Application incomplete. Only for education purpose.</string>

</resources>
