<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/ASEM_image_desc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASEM_title"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_title">

                <EditText
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASEM_category"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_studio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_category">

                <EditText
                    android:id="@+id/studio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASEM_study"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_studio">

                <EditText
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASEM_sinopsis"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_summary">

                <EditText
                    android:id="@+id/actor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASEM_actors"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_actor">

                <EditText
                    android:id="@+id/director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASEM_directors"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_producer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_director">

                <EditText
                    android:id="@+id/producer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ASEM_producers"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_above="@+id/btn_play_pause"
                android:layout_gravity="center"
                android:layout_weight="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_producer" />

            <ImageButton
                android:id="@+id/btn_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ASEM_button_trailer"
                android:src="@drawable/ic_play"
                app:layout_constraintBottom_toBottomOf="@+id/video_view" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:foregroundGravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/video_view" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_comment"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="2dp"
                android:minHeight="?android:attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar">

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ASEM_comment"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:scrollbars="vertical"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/til_comment">

                <ImageButton
                    android:id="@+id/buttonShare"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="0.25"
                    android:background="@android:drawable/ic_menu_share"
                    android:scaleType="fitCenter"
                    android:text="" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonShowComments"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="2"
                    android:text="@string/ASEM_show_comments"
                    android:textSize="12dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonComment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="2"
                    android:text="@string/ASEM_push_comment"
                    android:textSize="12dp" />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>